[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/scenes/components/growth_play_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scenes/components/decay_play_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scenes/main/gameplay.gd" type="Script" id=3]
[ext_resource path="res://game/scenes/components/note.tscn" type="PackedScene" id=4]

[node name="Gameplay" type="Node2D"]
position = Vector2( 472, 648 )
script = ExtResource( 3 )

[node name="GrowthPlayArea" parent="." instance=ExtResource( 1 )]
position = Vector2( -172, -148 )

[node name="Note" parent="." instance=ExtResource( 4 )]
position = Vector2( -359, -315 )

[node name="Note2" parent="." instance=ExtResource( 4 )]
position = Vector2( 26, -476 )

[node name="Note3" parent="." instance=ExtResource( 4 )]
position = Vector2( -168, -598 )

[node name="DecayPlayArea" parent="." instance=ExtResource( 2 )]
position = Vector2( 700, -148 )

[node name="Note4" parent="." instance=ExtResource( 4 )]
position = Vector2( 86, -1920 )

[node name="Note5" parent="." instance=ExtResource( 4 )]
position = Vector2( 734, -1711 )

[node name="Note6" parent="." instance=ExtResource( 4 )]
position = Vector2( 896, -1547 )

[node name="Note7" parent="." instance=ExtResource( 4 )]
position = Vector2( 919, -1345 )

[node name="Note8" parent="." instance=ExtResource( 4 )]
position = Vector2( 736, -1159 )

[node name="Note9" parent="." instance=ExtResource( 4 )]
position = Vector2( 485, -934 )
